--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "author": "Isaac Z. Schlueter <i@izs.me> (http://blog.izs.me/)",
-  "name": "glob",
+  "name": "glob-microbundled",
   "description": "a little globber",
   "version": "7.1.6",
   "repository": {
     "type": "git",
     "url": "git://github.com/isaacs/node-glob.git"
   },
-  "main": "glob.js",
+  "source": "src/glob.js",
+  "main": "dist/glob.js",
+  "module": "dist/glob.module.js",
+  "unpkg": "dist/glob.umd.js",
   "files": [
     "glob.js",
     "sync.js",
@@ -16,19 +19,19 @@
   "engines": {
     "node": "*"
   },
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "microbundle": "^0.11.0",
+    "mkdirp": "0",
+    "rimraf": "^2.2.8",
+    "tap": "^12.0.1",
+    "tick": "0.0.6",
     "fs.realpath": "^1.0.0",
     "inflight": "^1.0.4",
     "inherits": "2",
     "minimatch": "^3.0.4",
     "once": "^1.3.0",
     "path-is-absolute": "^1.0.0"
-  },
-  "devDependencies": {
-    "mkdirp": "0",
-    "rimraf": "^2.2.8",
-    "tap": "^12.0.1",
-    "tick": "0.0.6"
   },
   "scripts": {
     "prepublish": "npm run benchclean",
